Fix horizontal scroll

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -17,6 +17,7 @@ html {
  * Remove default margin.
  */
 body {
+  overflow-x: hidden;
   margin: 0; }
 
 /* HTML5 display definitions
